--- a/jgclark.Dashboard/src/react/css/DropdownMenu.css
+++ b/jgclark.Dashboard/src/react/css/DropdownMenu.css
@@ -149,7 +149,7 @@
   font-size: 14px;
 }
 
-/* TODO: Style for input box with invalid input */
+/* Style for input box with invalid input */
 .dropdown .input-box-input:invalid {
   border: 1px solid #faa;
 }
