--- a/jgclark.Dashboard/src/react/css/SettingsDialog.css
+++ b/jgclark.Dashboard/src/react/css/SettingsDialog.css
@@ -1,18 +1,6 @@
 /* CSS specific to Settings Dialog from jgclark.Dashboard plugin */
 /* Last updated 2024-07-19 for v2.0.2 by @jgclark */
 
-/* Ensure the settings dialog content is hidden when closed */
-.settings-dialog-content {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    background-color: var(--bg-mid-color);
-    padding: 20px;
-    border-radius: 8px;
-    overflow-y: auto;
-    max-height: 80vh;
-}
-
 /* Style for the settings dialog */
 .settings-dialog {
     font-family: system-ui;
@@ -29,7 +17,18 @@
     /* z-index: 1000; */
     opacity: 0;
     transition: opacity 0.2s ease-out;
-    overflow: hidden;
+    overflow: auto;
+}
+
+/* Ensure the settings dialog content is hidden when closed */
+.settings-dialog-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: var(--bg-mid-color);
+    padding: 0.75rem 1.25rem;
+    overflow-y: auto;
+    max-height: 80vh;
 }
 
 /* Show the settings dialog with transition */
@@ -119,9 +118,11 @@
 .settings-dialog .switch-line {
     display: flex;
     align-items: center;
-    gap: 0.2rem;
-    justify-content: flex-start;
+    gap: 0.5rem;
     /* Left justify */
+    justify-content: flex-start;
+    /* little space above/below */
+    padding: 0.1rem 0rem 0.3rem 0rem;
 }
 
 /* Style for switch-input */
@@ -140,21 +141,31 @@
 .settings-dialog .input-box-container {
     display: flex;
     flex-direction: column;
-    width: 98%;
+    align-items: left;
+    /* width: 98%; */
+}
+
+/* Style for input-box-container (compact version) */
+.settings-dialog .input-box-container-compact {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* width: 98%; */
+}
+
+/* Style for input-box-wrapper - TODO: remove later */
+.settings-dialog .input-box-wrapper {
+    display: flex;
+    align-items: end;
+    /* gap: 10px; */
 }
 
 /* Style for input-box-label */
 .settings-dialog .input-box-label {
     font-weight: 500;
     color: var(--fg-alt-color);
-    margin-bottom: 0.3rem;
-}
-
-/* Style for input-box-wrapper */
-.settings-dialog .input-box-wrapper {
-    display: flex;
-    align-items: center;
-    /* gap: 10px; */
+    /* margin-bottom: 0.3rem; */
+    margin-right: 0.5rem;
 }
 
 /* Style for input-box-input */
@@ -167,6 +178,8 @@
     border-radius: 4px;
     font-family: system-ui;
     font-size: 14px;
+    /* vertical spacing above and below */
+    margin: 0.3rem 0rem;
 }
 
 /* Style for input box with invalid input */
@@ -224,7 +237,7 @@
 /* Style for combobox-wrapper */
 .settings-dialog .combobox-wrapper {
     display: flex;
-    align-items: center;
+    align-items: end;
     gap: 10px;
     position: relative;
     width: fit-content;
@@ -232,9 +245,10 @@
 
 /* Style for combobox-label */
 .settings-dialog .combobox-label {
-    margin-bottom: 0.3rem;
     font-weight: 500;
     color: var(--fg-alt-color);
+    margin-bottom: 0.3rem;
+    margin-right: 0.1rem;
 }
 
 /* Style for combobox-input */
@@ -262,8 +276,9 @@
     position: absolute;
     right: 0.8rem;
     pointer-events: none;
-    font-size: 1.2rem;
+    font-size: x-large;
     color: var(--tint-color);
+    align-self: center;
 }
 
 /* Style for combobox-dropdown */
@@ -327,14 +342,15 @@
 }
 
 .settings-dialog .ui-heading {
-    font-size: larger;
+    font-size: 150%;
     color: var(--tint-color);
-    padding-bottom: 0.2rem;
+    padding-bottom: 0.3rem;
     font-weight: 600;
-    text-align: center;
+    text-align: start;
 }
 
 .settings-dialog hr {
-    color: var(--fg-alt-color);
+    color: var(--divider-color);
     border-width: 0.3px;
+    width: 100%;
 }
