--- a/jgclark.Dashboard/src/react/components/Header/Header.css
+++ b/jgclark.Dashboard/src/react/components/Header/Header.css
@@ -14,7 +14,7 @@
 	/* Space between grid items */
 	gap: 0.5rem;
 	/* Padding around the header content */
-	padding: 0.4rem;
+	padding: 0.4rem 0.8rem 0.4rem 0.6rem;
 	padding-right: 1rem;
 	background-color: var(--bg-sidebar-color);
 	/* Ensure the header uses the full width -- if contained width:Nvw set to less than 100 */
@@ -24,6 +24,87 @@
 	z-index: 10;
 	top: 0px;
 	border-bottom: solid 1px var(--divider-color);
+
+	/* Style for combobox-container */
+	.combobox-container {
+			display: flex;
+			flex-direction: column;
+	}
+
+	/* Style for combobox-container (compact version) */
+	.combobox-container-compact {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			gap: 0.4rem;
+	}
+
+	.combobox-wrapper {
+			display: flex;
+			align-items: end;
+			gap: 10px;
+			position: relative;
+			width: fit-content;
+	}
+
+	.combobox-label {
+			font-weight: 500;
+			color: var(--fg-alt-color);
+	}
+
+	.combobox-input {
+			flex: 1;
+			padding: 3px 6px;
+			border: 0.5px solid rgb(from var(--fg-main-color) r g b / 0.3);
+			border-radius: 4px;
+			font-size: 0.9rem;
+			/* width: 100%; */
+	}
+
+	.combobox-input:focus {
+			border-color: var(--hashtag-color);
+			outline: none;
+			box-shadow: 0 0 3px var(--hashtag-color);
+	}
+
+	.combobox-arrow {
+			position: absolute;
+			right: 0.4rem;
+			pointer-events: none;
+			font-size: larger;
+			color: var(--tint-color);
+			align-self: center;
+	}
+
+	.combobox-dropdown {
+			position: absolute;
+			top: 100%;
+			left: 0;
+			right: 0;
+			border: 1px solid var(--divider-color);
+			border-radius: 4px;
+
+			/* background-color: var(--bg-main-color); */
+			/* set button/input backgrounds a little lighter */
+			background-color: hsl(from var(--bg-sidebar-color) h s calc(l*1.4));
+
+			box-shadow: 0 2px 5px var(--divider-color);
+			z-index: 5;
+	}
+
+	.combobox-option {
+			cursor: pointer;
+			color: var(--fg-main-color);
+			padding: 0.2rem 0rem 0.2rem 0.4rem;
+			min-height: 0.9rem;
+			/* transition: background-color 0.2s; */
+	}
+
+	.combobox-option:hover {
+			background-color: var(--bg-alt-color);
+			color: var(--fg-alt-color);
+	}
+
 }
 
 /* MESSAGE_BANNER w3.css overrides */
@@ -74,11 +155,22 @@
 .dropdownButtons {
 	grid-area: dropdowns;
 	/* justify-self: end; */
+	/* gap between buttons */
 	gap: 0.9rem;
 	/* Align to the right edge */
 	justify-self: end;
 	justify-content: end;
-	/* margin-right: 1rem; */
+	margin-left: 0.4rem;
+
+	/* droppdown button icons through FontAwesome */
+	i {
+		color: var(--tint-color);
+		cursor: pointer;
+		/* Make button a little darker on hover */
+		&:hover {
+			color: hsl(from var(--tint-color) h s calc(l*0.8));
+		}
+	}
 }
 
 /* Widen button gaps on touchscreen interfaces, and leave gap for extra close button that appears */
@@ -107,104 +199,4 @@
 	&:i {
 		color: var(--tint-color);
 	}
-}
-
-/* droppdown button icons */
-.dropdownButtons i {
-	color: var(--tint-color);
-	cursor: pointer;
-	/* Make button a little darker on hover */
-	&:hover {
-		color: hsl(from var(--tint-color) h s calc(l*0.8));
-	}
-}
-
-/* ---------------------------------- */
-/* Style for combobox-container */
-.header .combobox-container {
-    display: flex;
-    flex-direction: column;
-}
-
-/* Style for combobox-container (compact version) */
-.header .combobox-container-compact {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 0.4rem;
-}
-
-/* Style for combobox-wrapper */
-.header .combobox-wrapper {
-    display: flex;
-    align-items: end;
-    gap: 10px;
-    position: relative;
-    width: fit-content;
-}
-
-/* Style for combobox-label */
-.header .combobox-label {
-    font-weight: 500;
-    color: var(--fg-alt-color);
-}
-
-/* Style for combobox-input */
-.header .combobox-input {
-    flex: 1;
-    padding: 3px 6px;
-    /* background-color: var(--bg-main-color); */
-    border: 0.5px solid rgb(from var(--fg-main-color) r g b / 0.3);
-    border-radius: 4px;
-    font-size: 0.9rem;
-    /* width: 100%; */
-}
-
-/* Focus style for combobox-input */
-.header .combobox-input:focus {
-    border-color: var(--hashtag-color);
-    outline: none;
-    box-shadow: 0 0 3px var(--hashtag-color);
-}
-
-/* Style for combobox-arrow */
-.header .combobox-arrow {
-    position: absolute;
-    right: 0.4rem;
-    pointer-events: none;
-    font-size: larger;
-    color: var(--tint-color);
-    align-self: center;
-}
-
-/* Style for combobox-dropdown */
-.header .combobox-dropdown {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    border: 1px solid var(--divider-color);
-    border-radius: 4px;
-
-    /* background-color: var(--bg-main-color); */
-		/* set button/input backgrounds a little lighter */
-		background-color: hsl(from var(--bg-sidebar-color) h s calc(l*1.4));
-
-    box-shadow: 0 2px 5px var(--divider-color);
-    z-index: 5;
-}
-
-/* Style for combobox-option */
-.header .combobox-option {
-    cursor: pointer;
-    color: var(--fg-main-color);
-    padding: 0.2rem 0rem 0.2rem 0.4rem;
-    min-height: 0.9rem;
-    /* transition: background-color 0.2s; */
-}
-
-/* Hover style for combobox option */
-.header .combobox-option:hover {
-    background-color: var(--bg-alt-color);
-    color: var(--fg-alt-color);
 }
